--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --ext .ts --fix"
+    "vercel-build": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
