--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "npx prisma generate"
+    "vercel-build": "npx prisma db push "
   },
   "author": "",
   "license": "ISC",
