--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "npx prisma generate"
+    "vercel-build": "npx prisma db push"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.16.1",
     "fastify": "^4.18.0",
     "prisma": "^4.16.1",
